--- a/front-aula-09-1sem/css/style.css
+++ b/front-aula-09-1sem/css/style.css
@@ -1,1 +1,5 @@
 /* É um comentário em CSS */
+h1 {color: white;}
+body {background-color: rgb(45,45,45);}
+p {color: white;}
+center {color: white;}
